# daily-news

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: daily_news.example.json
daily_news/: __init__.py  app.py  cli.py  full_test.py  models.py  observability.py  reviews.py  runtime.py  scheduler.py  settings.py  storage.py  utils.py
docs/: reliability-hardening.md
scripts/: full_test.sh  run_scheduled.sh
tests/: test_article_network.py  test_cli.py  test_full_test.py  test_io_limits.py  test_observability.py  test_parsers.py  test_pipeline_failures.py  test_publication.py  test_quality_rules.py  test_reviews.py  test_runtime.py  test_scheduler.py  test_settings.py  test_storage.py  test_translation_network.py
tests/fixtures/: opencli_reddit.yaml  opencli_twitter.yaml
