[project]
name = "daily-news"
version = "0.1.0"
description = "Daily technical community intelligence reports from Reddit and X via Agent-Reach."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Daily News contributors" }
]

[project.scripts]
daily-news = "daily_news.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
